--- a/index.html
+++ b/index.html
@@ -1,73 +1,43 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Victory Road - Team Builder</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #fff;
-    color: #222;
-    margin: 0;
-    padding: 20px;
-    text-align: center;
-  }
-  #characters-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-  }
-  .character-card {
-    position: relative;
-    width: 120px;
-    cursor: pointer;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 10px;
-    background-color: #f9f9f9;
-    transition: box-shadow 0.3s;
-    user-select: none;
-  }
-  .character-card:hover {
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-  }
-  .character-sprite {
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    background-color: white;
-    margin-bottom: 8px;
-    object-fit: contain;
-    transition: transform 0.2s;
-  }
-  .character-card:hover .character-sprite {
-    transform: scale(1.1);
-    border-color: #666;
-  }
-  .icons-row {
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-    margin-bottom: 8px;
-  }
-  .icon-img {
-    width: 25px;
-    height: 25px;
-    object-fit: contain;
-  }
-</style>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
 <h1>Victory Road - Team Builder</h1>
 
-<div id="characters-container"></div>
+<div id="filters">
+  <label for="positionFilter">Position:</label>
+  <select id="positionFilter">
+    <option value="">All</option>
+    <option value="gk">Goalkeeper (GK)</option>
+    <option value="df">Defense (DF)</option>
+    <option value="mf">Midfield (MF)</option>
+    <option value="fw">Forward (FW)</option>
+  </select>
+
+  <label for="affinityFilter">Affinity:</label>
+  <select id="affinityFilter">
+    <option value="">All</option>
+    <option value="fire">Fire</option>
+    <option value="earth">Earth</option>
+    <option value="wind">Wind</option>
+    <option value="wood">Wood</option>
+  </select>
+
+  <label for="genderFilter">Gender:</label>
+  <select id="genderFilter">
+    <option value="">All</option>
+    <option value="male">Male</option>
+    <option value="female">Female</option>
+  </select>
+</div>
+
+<div id="charactersContainer"></div>
 
 <script src="main.js"></script>
-
 </body>
 </html>
