--- a/character.html
+++ b/character.html
@@ -1,93 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Character Detail</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #fafafa;
-      text-align: center;
-      padding: 20px;
-    }
-    .character-container {
-      display: inline-block;
-      background: white;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    img {
-      width: 150px;
-      height: 150px;
-      object-fit: contain;
-    }
-    .attribute-icons {
-      margin-top: 10px;
-    }
-    .attribute-icons img {
-      width: 30px;
-      height: 30px;
-      margin: 0 5px;
-    }
-    .description {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #333;
-    }
-    a {
-      display: block;
-      margin-top: 30px;
-      color: #007BFF;
-      text-decoration: none;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Character Details</title>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="character-container" id="characterContainer">
-    <h1 id="charName">Loading...</h1>
-    <img id="charImage" src="" alt="">
-    <div class="attribute-icons">
-      <img id="positionIcon" src="" alt="">
-      <img id="affinityIcon" src="" alt="">
-      <img id="genderIcon" src="" alt="">
-    </div>
-    <div class="description" id="charDescription"></div>
-  </div>
-  <a href="index.html">← Back to List</a>
+<div id="characterDetails"></div>
 
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const characterName = urlParams.get("name");
+<script>
+  // Get character id from URL
+  const params = new URLSearchParams(window.location.search);
+  const charId = params.get('id');
 
-    async function loadCharacterData() {
-      const response = await fetch("data/characters.json");
-      const characters = await response.json();
-      const character = characters.find(c => c.name === characterName);
+  fetch('characters.json')
+    .then(response => response.json())
+    .then(data => {
+      const character = data.find(c => c.id === charId);
+      const container = document.getElementById('characterDetails');
 
-      if (!character) {
-        document.getElementById("charName").textContent = "Character not found";
-        return;
+      if (character) {
+        container.innerHTML = `
+          <h2>${character.name}</h2>
+          <img src="sprites/characters/${character.id}.png" alt="${character.name}" style="width:150px;height:auto;" />
+          <p><strong>Position:</strong> <img src="sprites/positions/${character.position}.png" alt="${character.position}" style="width:30px;height:30px;" /></p>
+          <p><strong>Affinity:</strong> <img src="sprites/affinities/${character.affinity}.png" alt="${character.affinity}" style="width:30px;height:30px;" /></p>
+          <p><strong>Gender:</strong> <img src="sprites/gender/${character.gender}.png" alt="${character.gender}" style="width:30px;height:30px;" /></p>
+          <p><strong>Description:</strong> ${character.description || "No description available."}</p>
+          <a href="index.html">Back to list</a>
+        `;
+      } else {
+        container.textContent = "Character not found.";
       }
-
-      const nameDisplay = character.name.replace(/_/g, " ");
-      document.getElementById("charName").textContent = nameDisplay;
-      document.getElementById("charImage").src = `sprites/characters/${character.name}.png`;
-      document.getElementById("charImage").alt = nameDisplay;
-      document.getElementById("positionIcon").src = `sprites/positions/${character.position}.png`;
-      document.getElementById("affinityIcon").src = `sprites/affinities/${character.affinity}.png`;
-      document.getElementById("genderIcon").src = `sprites/gender/${character.gender}.png`;
-
-      // Descripción solo para bai_long por ahora
-      const descriptions = {
-        "bai_long": "Un chico joven con una confianza absoluta en su propia habilidad. Alberga una rivalidad con Victor."
-      };
-
-      const description = descriptions[character.name] || "No additional information available.";
-      document.getElementById("charDescription").textContent = description;
-    }
-
-    loadCharacterData();
-  </script>
+    })
+    .catch(() => {
+      document.getElementById('characterDetails').textContent = "Error loading character data.";
+    });
+</script>
 </body>
 </html>
