--- a/character.html
+++ b/character.html
@@ -11,6 +11,29 @@
       color: #000;
     }
     .container {
+  max-width: 600px;
+  margin: auto;
+  text-align: center;
+}
+
+.character-image {
+  max-width: 300px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  display: block;
+  margin: 20px auto;
+}
+
+.back-link {
+  display: inline-block;
+  margin-top: 20px;
+  text-decoration: none;
+  color: #007BFF;
+  font-weight: bold;
+}
+
+    .container {
       text-align: center;
     }
     .sprite {
