--- a/character.html
+++ b/character.html
@@ -15,8 +15,12 @@
       text-align: center;
     }
     .sprite {
-      width: 150px;
-      height: 150px;
+    max-width: 300px;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 20px auto;
     }
     .description {
       margin-top: 20px;
