--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
             <img src="sprites/positions/${char.position}.png" alt="${char.position}">
             <img src="sprites/affinities/${char.affinity}.png" alt="${char.affinity}">
             <img src="sprites/gender/${char.gender}.png" alt="${char.gender}">
+            .sprite {
+    max-width: 300px;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 20px auto;
           </div>
         `;
         container.appendChild(card);
