--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
       cursor: pointer;
     }
     .character-card img.character-sprite {
-    max-width: 150px;
-    width: auto;
-    height: auto;
+    width: 150px;
+    height: 200px;
     object-fit: contain;
     display: block;
     margin: 20px auto;
