--- a/index.html
+++ b/index.html
@@ -70,24 +70,25 @@
   <h1>Inazuma Eleven: Victory Road – Team Builder</h1>
 
   <div class="filters">
+    <h1>Posicion</h1>
     <select id="filter-position">
-      <option value="">All Positions</option>
-      <option value="gk">Goalkeeper (GK)</option>
-      <option value="df">Defender (DF)</option>
-      <option value="mf">Midfielder (MF)</option>
-      <option value="fw">Forward (FW)</option>
+      <option value="">Todos</option>
+      <option value="gk">Portero (GK)</option>
+      <option value="df">Defensa (DF)</option>
+      <option value="mf">Mediocampista (MF)</option>
+      <option value="fw">Delantero (FW)</option>
     </select>
 
     <select id="filter-affinity">
-      <option value="">All Affinities</option>
-      <option value="fire">Fire</option>
-      <option value="earth">Earth</option>
-      <option value="wind">Wind</option>
-      <option value="wood">Wood</option>
+      <option value="">Todos</option>
+      <option value="fire">Fuego</option>
+      <option value="earth">Tierra</option>
+      <option value="wind">Aire</option>
+      <option value="wood">Bosque</option>
     </select>
 
     <select id="filter-gender">
-      <option value="">All Genders</option>
+      <option value="">Todos</option>
       <option value="male">Male</option>
       <option value="female">Female</option>
     </select>
