--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <h1>Inazuma Eleven: Victory Road – Team Builder</h1>
 
   <div class="filters">
-    <h1>Posicion</h1>
+    <span>Posición</span>
     <select id="filter-position">
       <option value="">Todos</option>
       <option value="gk">Portero (GK)</option>
