--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <option value="fw">Delantero (FW)</option>
     </select>
 
+    <span>Afinidad</span>
     <select id="filter-affinity">
       <option value="">Todos</option>
       <option value="fire">Fuego</option>
@@ -87,6 +88,7 @@
       <option value="wood">Bosque</option>
     </select>
 
+    <span>Género</span>
     <select id="filter-gender">
       <option value="">Todos</option>
       <option value="male">Male</option>
