--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Inazuma Eleven - Team Builder</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Lexend, normal;
       background-color: #ffffff;
       color: #000000;
       margin: 0;
